# django-librarymanagementsystem

./: .gitignore  .pylintrc  Makefile  README.md  docker-compose.yml  manage.py  populate_data.py  pyproject.toml  pytest.ini  query_practice.py  requirements.txt
book/: container.py  urls.py
book/entities/: __init__.py  author_entity.py  book_entity.py  genre_entity.py  publisher_entity.py
book/migrations/: 0001_initial.py  0002_auto_20250323_1856.py  0003_auto_20250323_1859.py
book/models/: __init__.py  author.py  book.py  genre.py  publisher.py
book/repositories/: author_repository.py  book_repository.py  genre_repository.py  publisher_repository.py
book/serializes/: __init__.py  author_response_serializer.py  book_create_serializer.py  book_response_serializer.py  enriched_book_response_serializer.py  genre_response_serializer.py  publisher_response_serializer.py
book/services/: author_crud_service.py  book_crud_service.py  genre_service.py  publisher_crud_service.py
book/use_cases/: __init__.py  create_book_use_case.py  get_book_use_case.py
book/views/: book_view.py
librarymanagementsystem/: __init__.py  asgi.py  container.py  settings.py  urls.py  wsgi.py
member/: container.py  urls.py
member/entities/: __init__.py  borrowing_entity.py  member_entity.py
member/migrations/: 0001_initial.py
member/models/: __init__.py  borrowing_history.py  member.py
member/repositories/: borrowing_repository.py  member_repository.py
member/serializers/: __init__.py  active_book_serializer.py  borrowed_book_serializer.py  borrowing_stats_serializer.py  member_active_books_response_serializer.py  member_borrowing_response_serializer.py
member/services/: member_service.py
member/use_cases/: __init__.py  borrow_book_use_case.py
member/views/: member_view.py
tests/: conftest.py
tests/test_integration/: test_book_create_view.py
tests/test_services/: test_book_crud_service.py
